# troposphere

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  Brendan_EMR_Cluster.py  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTE.rst  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  README.rst.original  RELEASE.md  RELEASE.rst  VIAPLAY_CONTRIBUTING.md  dynmodb_diff.rst  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  resources_aws.md  resources_openstack.md  runtests.py  setup.cfg  setup.py  test_requirements.txt  tox.ini
.github/: CODEOWNERS  copilot-instructions.md
docs/: .gitignore  CONTRIBUTE.md  Makefile  README.md  changelog.rst  code_of_conduct.rst  conf.py  contribute.rst  contributing.md  examples.rst  index.rst  make.bat  quick_start.rst  requirements.txt  troposphere.rst  troposphere_ag.rst  troposphere_helpers.rst  troposphere_iz.rst  troposphere_openstack.rst
env/: pip-selfcheck.json
examples/: ALB-ECS-WithElasticSearchLogs-AppStack  ALB-ECS-WithElasticSearchLogs-AppStack.py  ALB-ECS-WithElasticSearchLogs-NetworkStack  ALB-ECS-WithElasticSearchLogs-NetworkStack.py  ALB_Autoscaling_Route53_A_Alias_Sample.py  ApiGateway.py  ApplicationAutoScalingSample.py  ApplicationELB.py  ApplicationLB_FixedActions.py  AuroraServerlessRDS_SecretsManager.py  AutoScalingMultiAZWithNotifications.py  Autoscaling.py  AutoscalingHTTPRequests.py  Backup.py  Batch.py  BatchEventSnsLambda.py  CertificateManagerSample.py  ClassExtensions.py  CloudFormation_Init_ConfigSet.py  CloudFront_Distribution_S3.py  CloudFront_S3.py  CloudFront_StreamingDistribution_S3.py  CloudTrail.py  CloudWatchEventsSample.py  CodeBuild.py  CodeDeploy.py  CodePipeline.py  ControlTower.py  CustomResource.py  Dlm.py  DynamoDB2_Table.py  DynamoDB2_Table_With_GSI_And_NonKeyAttributes_Projection.py  DynamoDB2_Table_With_GlobalSecondaryIndex.py  DynamoDB_Table.py  DynamoDB_Table_With_GSI_And_NonKeyAttributes_Projection.py  DynamoDB_Table_With_GlobalSecondaryIndex.py  DynamoDB_Table_With_KinesisStreamSpecification.py  DynamoDB_Tables_OnDemand.py  DynamoDb_Table_With_GlobalSecondaryIndex.py  EC2Conditions.py  (+70 more)
exosphere/: __init__.py  base.py  constants.py  utils.py
ionosphere/: __init__.py  base.py  compute.py  constants.py  key_vault.py  managed_identity.py  network.py  storage.py
macro/: Makefile  README.md  example.py  template.yaml
p3s/: gen.py  gen2.py
scripts/: TroposphereClassCreator.py  cfn  cfn2py  cfn2pyclass  gen.py  generate_resource_docs.py  genstub2.py  genstub3.py  newgen.py  regen  release.py
tests/: s3.py  test_apigateway.py  test_apigatewayv2.py  test_appconfig.py  test_appsync.py  test_asg.py  test_autoscaling.py  test_awslambda.py  test_basic.py  test_batch.py  test_cloudformation.py  test_cloudfront.py  test_cloudwatch.py  test_codebuild.py  test_codecommit.py  test_config.py  test_controltower.py  test_dict.py  test_dlm.py  test_dns.py  test_ec2.py  test_ecr.py  test_ecs.py  test_efs.py  test_eks.py  test_elasticloadbalancerv2.py  test_elasticsearch.py  test_emr.py  test_examples.py  test_examples_template_generator.py  test_findinmap.py  test_fsx.py  test_guardduty.py  test_implicit_ref.py  test_instrinsic_functions.py  test_int_type.py  test_iot1click.py  test_iottwinmaker.py  test_language_extensions.py  test_loggroup.py  (+26 more)
troposphere/: __init__.py  accessanalyzer.py  acmpca.py  aiops.py  amazonmq.py  amplify.py  analytics.py  apigateway.py  apigatewayv2.py  appconfig.py  appflow.py  appintegrations.py  applicationautoscaling.py  applicationinsights.py  applicationsignals.py  appmesh.py  apprunner.py  appstream.py  appsync.py  apptest.py  aps.py  arcregionswitch.py  arczonalshift.py  (+265 more)
troposphere-gen/: types.py
(+327 files in other folders)
