[metadata]
name = troposphere
version = attr: troposphere.__version__
url = https://github.com/cloudtools/troposphere
author = Mark Peek
author_email = mark@peek.org
description = AWS CloudFormation creation library
long_description = file: README.rst
long_description_content_type = text/x-rst
license = New BSD license
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
project_urls =
    Changelog = https://github.com/cloudtools/troposphere/blob/master/CHANGELOG.md
    Source = https://github.com/cloudtools/troposphere
    Tracker = https://github.com/cloudtools/troposphere/issues

[options]
test_suite = tests
tests_require = awacs>=2.0.0
include_package_data = true
install_requires =
    cfn_flip >= 1.0.2
packages =
    troposphere
    troposphere.openstack
    troposphere.helpers
    troposphere.type_defs
    troposphere.validators
scripts =
    scripts/cfn
    scripts/cfn2py
python_requires = >=3.8
zip_safe = false

[options.extras_require]
policy = awacs>=2.0.0

[flake8]
max-line-length = 88
extend-ignore = E203, W503, E501

[pycodestyle]
max-line-length = 88
ignore = E203,W503,E501

[isort]
profile = black
